--- a/LMS.Blazor/Components/Layout/NavMenu.razor
+++ b/LMS.Blazor/Components/Layout/NavMenu.razor
@@ -35,6 +35,11 @@
                     </NavLink>
                 </div>
                 <div class="nav-item px-2">
+                <NavLink class="nav-link" href="courses">
+                    <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Courses
+                </NavLink>
+                </div>
+                <div class="nav-item px-2">
                     <NavLink class="nav-link" href="Account/Manage">
                         <span class="bi bi-person-fill-nav-menu" aria-hidden="true"></span> @context.User.Identity?.Name
                     </NavLink>
