Works with wildcard routes

--- a/LMS.Blazor.Client/Pages/Courses.razor
+++ b/LMS.Blazor.Client/Pages/Courses.razor
@@ -55,7 +55,7 @@ else
 
     private async Task CallAPIAsync()
     {
-        demo = (await _apiService.CallApiAsync2())
+        demo = (await _apiService.CallApiAsync2("api/courses"))
             .ToList();
     }
 }
