--- a/LMS.Blazor.Client/Pages/DemoAuth.razor
+++ b/LMS.Blazor.Client/Pages/DemoAuth.razor
@@ -59,7 +59,7 @@ else
 
     private async Task CallAPIAsync()
     {
-        demo = (await _apiService.CallApiAsync())
+        demo = (await _apiService.CallApiAsync("api/demoauth"))
             .ToList();
     } 
 }
