Make Generic ClientApiService and remove dupplicates

--- a/LMS.Blazor.Client/Pages/Courses.razor
+++ b/LMS.Blazor.Client/Pages/Courses.razor
@@ -55,7 +55,6 @@ else
 
     private async Task CallAPIAsync()
     {
-        demo = (await _apiService.CallApiAsync2("api/courses"))
-            .ToList();
+        demo = (await _apiService.CallApiAsync<IEnumerable<CourseDto>>("api/demoauth"))?.ToList() ?? [];
     }
 }
