--- a/LMS.Blazor.Client/Pages/Courses.razor
+++ b/LMS.Blazor.Client/Pages/Courses.razor
@@ -55,6 +55,6 @@ else
 
     private async Task CallAPIAsync()
     {
-        demo = (await _apiService.CallApiAsync<IEnumerable<CourseDto>>("api/demoauth"))?.ToList() ?? [];
+        demo = (await _apiService.CallApiAsync<IEnumerable<CourseDto>>("api/courses"))?.ToList() ?? [];
     }
 }
