--- a/LMS.Blazor.Client/Pages/DemoAuth.razor
+++ b/LMS.Blazor.Client/Pages/DemoAuth.razor
@@ -59,6 +59,6 @@ else
 
     private async Task CallAPIAsync()
     {
-        demo = (await _apiService.CallApiAsync<IEnumerable<DemoDto>>("api/demoauth"))?.ToList() ?? [];
+        demo = (await _apiService.GetAsync<IEnumerable<DemoDto>>("api/demoauth"))?.ToList() ?? [];
     } 
 }
